@@ -25,14 +25,16 @@
 
     LM PLC:
 
+    - list_remote returns array instead of dict + controller_id proprety
     - result function in macro api. terminate and result function accept action uuid as a param
-    - list_remote controller items return now array instead of dict
     - on_set lm rule (status changed to 1)
     - new LM API and macro functions: clear (set lvar value to 0), toggle (toggles lvar value between 0 and 1)
     - cmd macro function now accepts full controller ids (uc/controller_id) as well as short
 
     SFA:
 
+    - list_remote returns array instead of dict + controller_id proprety
+    - list_macros contains now controller property
     - append_controller now tries to autodetect controller type if no type specified
     - sfa pvt access logs
 
